src/main/java/com/example/property_management/error/exception/AssignmentAlreadyInactiveException.java
package com.example.property_management.error.exception;

public class AssignmentAlreadyInactiveException extends RuntimeException {
    public AssignmentAlreadyInactiveException(String message) {
        super(message);
    }
}
